--- a/tela hbo intermediária/assets/css/style.css
+++ b/tela hbo intermediária/assets/css/style.css
@@ -4,75 +4,70 @@
 body {
     background-color: #0F0F0F;
     color: white;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
     #img-logo {
-        position: absolute;
-        width: 115px;
-        height: 19px;
-        left: 630px;
-        top: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 580px;
+        margin-top: 20px;
 
     }
 
     .menu {
-        position: absolute;
         width: 169px;
         height: 74px;
-        left: 610px;
-        top: 57px;
         font-family: 'Inter';
         font-weight: 400;
         font-size: 28px;
-        display: flex;
-        flex-direction: column;
         align-items: center;
-        text-align: center;
+        justify-content: center;
+        margin-left: 600px;
+        margin-top: 10px;
+
 
     }
 
     #entrar {
-        position: absolute;
         width: 169px;
         height: 74px;
-        left: 610px;
-        top: 107px;
         font-family: 'Inter';
         font-weight: 400;
         font-size: 28px;
-        display: flex;
-        flex-direction: column;
+        justify-content: center;
         align-items: center;
-        text-align: center;
+        margin-left: 600px;
+
     }
 
     
     #frase1 {
-        position: absolute;
         width: 473px;
         height: 74px;
-        left: 510px;
-        top: 207px;
         font-family: 'Inter';
         font-weight: 400;
         font-size: 28px;
-        display: flex;
+        justify-content: center;
         align-items: center;
-        text-align: center;
+        margin-left: 480px;
+
     }
 
 
     form {
-        position: absolute;
         width: 473px;
         height: 74px;
-        left: 450px;
-        top: 307px;
         font-family: 'Inter';
         font-weight: 400;
         font-size: 28px;
         display: flex;
         flex-direction: column;
+        margin-left: 430px;
+
 
     }
 
@@ -90,7 +85,6 @@ body {
         width: 520px;
         height: 74px;
         left: 110px;
-        top: 307px;
         font-family: 'Inter';
         font-weight: 400;
         font-size: 28px;
@@ -102,12 +96,8 @@ body {
     }
 
     #botao1 {
-        box-sizing: border-box;
-        position: absolute;
         width: 214px;
         height: 55px;
-        left: 150px;
-        top: 207px;
         background: #8C77E0;
         border: 1px solid #000000;
         box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
@@ -118,28 +108,31 @@ body {
         font-weight: 450;
         font-size: 30px;
         cursor: pointer;
+        justify-content: center;
+        align-items: center;
+        margin-left: 150px;
+        margin-top: 20px;
     }
 
     #frase2 {
-        position: absolute;
         width: 520px;
-        height: 74px;
-        left: 480px;
-        top: 607px;
+        height: 74px;        
         font-family: 'Inter';
         font-weight: 400;
         font-size: 28px;
         display: flex;
         text-align: center;
+        align-items: center;
+        margin-left: 430px;
+        margin-top: 200px;
+
     }
 
     #botao2 {
-        box-sizing: border-box;
         position: absolute;
         width: 360px;
         height: 55px;
-        left: 55px;
-        top: 107px;
+        top: 700px;
         background: #8C77E0;
         border: 1px solid #000000;
         box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
@@ -150,6 +143,10 @@ body {
         font-weight: 450;
         font-size: 30px;
         cursor: pointer;
+        justify-content: center;
+        align-items: center;
+        margin-left: 75px;
+    
     }
 
 
