--- a/tela hbo intermediária/assets/css/style.css
+++ b/tela hbo intermediária/assets/css/style.css
@@ -186,7 +186,8 @@ body {
         }
 
         #botao1 {
-            margin-left: 35px;
+            height: 80px;
+            margin-left: 40px;
             font-size: 18px;
         }
 
