ajuste de frase

--- a/tela hbo intermediária/assets/css/style.css
+++ b/tela hbo intermediária/assets/css/style.css
@@ -192,6 +192,7 @@ body {
         }
 
         #frase2 {
+            width: 300px;
             margin-left: 80px;
             font-size: 18px;
             width: 200px;
