--- a/tela hbo max simples/assets/css/style.css
+++ b/tela hbo max simples/assets/css/style.css
@@ -108,58 +108,74 @@
         cursor: pointer;
     }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (min-width: 320px) and (max-width: 480px) {
         body {
           margin: 0;
-          padding: 0
+          padding: 0;
+          box-sizing: border-box;
+        }
+
+        img {
+            left: 30px;
+        }
+
+        h1 {
+            left: 30px;
+        }
+
+        #frase1 {
+            left: 20px;
+            font-size: 22px;
+        }
+
+        #email {
+            left: 30px;
+            font-size: 22px;
         }
 
         #input-email {
-            position: absolute;
-            width: 380px;
-            height: 53px;
-            left: 94px;
-            top: 296px;
-            font-family: 'Times New Roman';
-            font-size: 33px;
-            box-sizing: border-box;
-            border: 2px solid #000000;
+            width: 280px;
+            left: 30px;
+            height: 30px;
+            top: 270px;
+            font-size: 22px;
+        }
+        #senha {
+            left: 30px;
+            font-size: 22px;
+            top: 320px;
+            font-size: 22px;
         }
 
         #input-senha {
-            position: absolute;
-            width: 380px;
-            height: 53px;
-            left: 94px;
-            top: 441px;
-            font-family: 'Times New Roman';
-            font-size: 33px;
-            box-sizing: border-box;
-            border: 2px solid #000000;
+            width: 280px;
+            left: 30px;
+            height: 30px;
+            top: 360px;
         }
 
+        
+    #botao1 {
+        left: 30px;
+        top: 420px;
+        width: 150px;
+        height: 30px;
+        font-size: 19px;
+    }
+
         #frase2 {
-            position: absolute;
-            width: 387px;
-            height: 74px;
-            left: 97px;
-            top: 625px;
-            font-size: 25px;
+            left: 30px;
+            font-size: 22px;
+            width: 280px;
+            top: 480px;
         }
 
         #botao2 {
-            box-sizing: border-box;
-            position: absolute;
-            width: 304.5px;
-            height: 55px;
-            left: 94px;
-            top: 724px;
-            background: #EFEFEF;
-            border: 1px solid #000000;
-            border-radius: 5px;
-            font-family: 'Times New Roman';
-            font-size: 28px;
-            cursor: pointer;
+            width: 150px;
+            height: 60px;
+            left: 30px;
+            top: 579px;
+            font-size: 22px;
         }
     
       }
