ajuste input de senha responsividade na tela simples

--- a/tela hbo max simples/assets/css/style.css
+++ b/tela hbo max simples/assets/css/style.css
@@ -152,6 +152,7 @@
             left: 30px;
             height: 30px;
             top: 360px;
+            font-size: 22px;
         }
 
         
